--- a/modulo1/css-bugfixes/index.css
+++ b/modulo1/css-bugfixes/index.css
@@ -100,6 +100,13 @@ div:last-child {
 
 table {
     width: 60%;
+    table-layout: fixed;
+    border-collapse: collapse;
+    
+}
+td {
+    text-align: center;
+    padding-left: 40%;
 }
 
 td button {
