Imagens da pagina de compras tiveram o tamanho reduzido e padronizado

--- a/modulo1/css-bugfixes/index.css
+++ b/modulo1/css-bugfixes/index.css
@@ -109,6 +109,11 @@ td {
     padding-left: 40%;
 }
 
+.img{
+    max-width: 80px;
+    min-width: 80px;
+}
+
 td button {
     background-color: #fadf63;
     width: 150px;
