--- a/modulo1/css-bugfixes/index.css
+++ b/modulo1/css-bugfixes/index.css
@@ -33,9 +33,6 @@ div>p:first-child {
     display: inline;
 }
 
-div img {
-    background: black;
-}
 
 .botao-amarelo {
     background-color: #ffaf43;
@@ -57,7 +54,8 @@ div img {
 }
 
 .icone {
-    height: 15px;
+    height: 17px;
+    width: 17px;
 }
 
 
