--- a/modulo1/css-labetube/style.css
+++ b/modulo1/css-labetube/style.css
@@ -14,24 +14,22 @@ header{
 .search{
     display: flex;
     justify-items: center;
+    justify-content: flex-end;
     padding: 5px;
 }
 
 .button-search{
-    margin: 4px;
-    max-height: 29px;
-    width: 40px;    
-}
+    max-width: 5%;    
+}    
 
 .lupa-button{
-    height: 20px;
-    width: 20px;
+    height: 80%;
+    width: 80%;
 }
 
 input[type="text" i]{
-    width: 200px;
-    padding: 5px 5px;
-    margin: 5px;    
+    width: 30%;
+    padding: 5px 5px;   
 }
 
 footer{
@@ -42,17 +40,23 @@ footer{
 }
 
 body{
-    min-height: 100vh;    
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: space-between;
+    height: 100vh;
+    width: 100%;
 }
 
 .main-home{
     display: grid;
-    min-height: 82vh;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 20px;
     margin: 20px;
     padding-left: 20px;
 }
+
+
 
 .main-video{
     display: flex;
@@ -63,6 +67,7 @@ body{
     align-items: center;
 }
 
+
 a {
     color: inherit;
     text-decoration: none;
@@ -71,7 +76,6 @@ a {
 .video-thumb{
     box-shadow: 3px 3px 3px darkgray;
     padding: 5px 5px;
-    height: 230px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -83,4 +87,66 @@ a {
 .video-thumb:hover{
     background-color: rgba(169, 169, 169, 0.486);
     transition: 0.5s;
+}
+
+@media screen and (min-device-width : 320px) and (max-device-width : 480px) {
+    .button-search{
+        max-width: 15%;   
+    }
+}
+
+@media screen and (max-width : 600px){
+    .button-search{
+        max-width: 8%;
+    }
+}
+
+@media screen and (max-width : 1200px){
+    .main-home{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 20px;
+        margin: 20px;
+        padding-left: 20px;
+    }
+}
+
+@media screen and (max-width : 1000px){
+    .main-home{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 20px;
+        margin: 20px;
+        padding-left: 20px;
+    }
+}
+
+@media screen and (max-width : 600px){
+    .main-home{
+        display: grid;
+        grid-template-columns: 1fr ;
+        gap: 20px;
+        margin: 20px;
+        padding-left: 20px;
+    }
+}
+
+@media screen and (min-device-width : 481px) and (max-device-width : 800px){
+    .main-home{
+        display: grid;
+        grid-template-columns: 1fr 1fr ;
+        gap: 20px;
+        margin: 20px;
+        justify-items: center;
+    }
+}
+
+@media screen and (min-device-width : 320px) and (max-device-width : 480px) {
+    .main-home{
+        display: grid;
+        grid-template-columns: 1fr ;
+        gap: 20px;
+        margin: 20px;
+        justify-items: center;
+    }
 }
